# Projekt_1_sem4

./: .gitignore  CMakeLists.txt  DifficultiesWithHeap.txt  Guide.txt
inc/: debug.hh  heap.hh  packet.hh  person.hh
src/: heap.cpp  main.cpp  person.cpp
